--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@import url("https://fonts.googleapis.com/css2?family=Itim&family=Roboto:wght@400;500;700&family=Work+Sans:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Itim&family=Noto+Sans+NKo&family=Roboto:wght@400;500;700&family=Work+Sans:wght@500&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
-@layer base {
-  html {
-    font-family: "Inter", sans-serif;
-  }
+@import url("https://fonts.googleapis.com/css2?family=Itim&family=Noto+Sans+NKo&family=Roboto:wght@400;500;700&family=Work+Sans:wght@500&display=swap");
 
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
-}
-
-* {
-  font-family: "Inter", sans-serif;
-}
-
-body {
-  font-family: "Inter", sans-serif;
-}
-
-html {
-  font-family: "Inter", sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
