--- a/src/app/wpstyles.scss
+++ b/src/app/wpstyles.scss
@@ -1,26 +1,25 @@
-@use 'sass:math';
+@use "sass:math";
 @import "../../node_modules/@wordpress/base-styles/colors";
 @import "../../node_modules/@wordpress/base-styles/variables";
 @import "../../node_modules/@wordpress/base-styles/mixins";
 @import "../../node_modules/@wordpress/base-styles/breakpoints";
 @import "../../node_modules/@wordpress/base-styles/animations";
 @import "../../node_modules/@wordpress/base-styles/z-index";
-@import '../../node_modules/@wordpress/block-library/src/style';
-@import '../../node_modules/@wordpress/block-library/src/theme';
+@import "../../node_modules/@wordpress/block-library/src/style";
+@import "../../node_modules/@wordpress/block-library/src/theme";
 
 @import url("https://fonts.googleapis.com/css2?family=Itim&family=Noto+Sans+NKo&family=Roboto:wght@400;500;700&family=Work+Sans:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Itim&family=Noto+Sans+NKo&family=Roboto:wght@400;500;700&family=Source+Sans+Pro:wght@400;600;700&family=Work+Sans:wght@500&display=swap");
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 .class_test {
   font-weight: bold;
-
+  font-size: x-large;
+  color: #f55;
   .follow {
     background: #000;
   }
