--- a/src/app/wpstyles.scss
+++ b/src/app/wpstyles.scss
@@ -1,26 +1,93 @@
 @use "sass:math";
-@import "../../node_modules/@wordpress/base-styles/colors";
-@import "../../node_modules/@wordpress/base-styles/variables";
-@import "../../node_modules/@wordpress/base-styles/mixins";
-@import "../../node_modules/@wordpress/base-styles/breakpoints";
-@import "../../node_modules/@wordpress/base-styles/animations";
-@import "../../node_modules/@wordpress/base-styles/z-index";
-@import "../../node_modules/@wordpress/block-library/src/style";
-@import "../../node_modules/@wordpress/block-library/src/theme";
 
 @import url("https://fonts.googleapis.com/css2?family=Itim&family=Noto+Sans+NKo&family=Roboto:wght@400;500;700&family=Work+Sans:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Itim&family=Noto+Sans+NKo&family=Roboto:wght@400;500;700&family=Source+Sans+Pro:wght@400;600;700&family=Work+Sans:wght@500&display=swap");
 
+// @import "../../node_modules/@wordpress/base-styles/colors.scss";
+// @import "../../node_modules/@wordpress/base-styles/variables.scss";
+// @import "../../node_modules/@wordpress/base-styles/mixins.scss";
+// @import "../../node_modules/@wordpress/base-styles/breakpoints.scss";
+// @import "../../node_modules/@wordpress/base-styles/animations.scss";
+// @import "../../node_modules/@wordpress/base-styles/z-index.scss";
+
+@import "../../node_modules/@wordpress/base-styles/_colors.scss";
+@import "../../node_modules/@wordpress/base-styles/_variables.scss";
+@import "../../node_modules/@wordpress/base-styles/_mixins.scss";
+@import "../../node_modules/@wordpress/base-styles/_breakpoints.scss";
+@import "../../node_modules/@wordpress/base-styles/_animations.scss";
+@import "../../node_modules/@wordpress/base-styles/_z-index.scss";
+@import "../../node_modules/@wordpress/base-styles/_default-custom-properties.scss";
+@import "../../node_modules/@wordpress/block-library/src/style.scss";
+@import "../../node_modules/@wordpress/block-library/src/theme.scss";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.class_test {
+.wordpress_content {
+  h1 {
+    padding-top: 1.5rem;
+    font-size: 2rem;
+    font-weight: bold;
+    p {
+      padding-top: 0.5rem;
+    }
+  }
+  h2 {
+    padding-top: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    p {
+      padding-top: 0.5rem;
+    }
+  }
+  h3 {
+    padding-top: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+
+    p {
+      padding-top: 0.5rem;
+    }
+  }
+}
+
+// .wp-block-heading {
+//   font-size: 2rem;
+//   padding-top: 1rem;
+//   p {
+//     padding: 1rem;
+//   }
+//   h1 {
+//     font-size: 2rem;
+//   }
+//   h2 {
+//     font-size: 1.5rem;
+//   }
+//   h3 {
+//     font-size: 1rem;
+//   }
+// }
+
+.wp-block-media-text {
+  box-sizing: border-box;
+  direction: ltr;
+  display: grid;
+  grid-template-columns: 50% 1fr;
+  grid-template-rows: auto;
+  padding: 1rem 0;
+}
+
+.wp-block-buttons > .wp-block-button {
+  display: inline-block;
+  margin: 0;
   font-weight: bold;
-  font-size: x-large;
-  color: #f55;
-  .follow {
-    background: #000;
+  background-color: rgb(243 244 246);
+  color: #050950;
+  border-radius: 0.2rem;
+  padding: 0.1rem 0.4rem;
+  :hover {
+    text-decoration: underline;
   }
 }
