--- a/src/app/wpstyles.scss
+++ b/src/app/wpstyles.scss
@@ -26,30 +26,46 @@
 @tailwind utilities;
 
 .wordpress_content {
+  font-size: 1.5em;
+
   h1 {
-    padding-top: 1.5rem;
-    font-size: 2rem;
-    font-weight: bold;
-    p {
-      padding-top: 0.5rem;
-    }
-  }
-  h2 {
-    padding-top: 1.5rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-    p {
-      padding-top: 0.5rem;
-    }
-  }
-  h3 {
-    padding-top: 1rem;
-    font-size: 1rem;
+    padding-top: 3rem;
+    font-size: 2.5rem;
     font-weight: bold;
 
     p {
       padding-top: 0.5rem;
     }
+  }
+
+  h2 {
+    padding-top: 2.5rem;
+    font-size: 2rem;
+    font-weight: bold;
+
+    p {
+      padding-top: 0.5rem;
+    }
+  }
+
+  h3 {
+    padding-top: 2rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+
+    p {
+      padding-top: 0.5rem;
+    }
+  }
+
+  ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
   }
 }
 
@@ -87,6 +103,7 @@
   color: #050950;
   border-radius: 0.2rem;
   padding: 0.1rem 0.4rem;
+
   :hover {
     text-decoration: underline;
   }
