--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4167,31 +4167,25 @@ html :where(.is-position-sticky) {
 @tailwind components;
 @tailwind utilities;
 .wordpress_content {
-  font-size: 1.5em;
+  font-size: 1.2rem;
+}
+.wordpress_content > p {
+  padding-bottom: 0.8rem;
 }
 .wordpress_content h1 {
   padding-top: 3rem;
   font-size: 2.5rem;
   font-weight: bold;
 }
-.wordpress_content h1 p {
-  padding-top: 0.5rem;
-}
 .wordpress_content h2 {
   padding-top: 2.5rem;
   font-size: 2rem;
   font-weight: bold;
 }
-.wordpress_content h2 p {
-  padding-top: 0.5rem;
-}
 .wordpress_content h3 {
   padding-top: 2rem;
   font-size: 1.5rem;
   font-weight: bold;
-}
-.wordpress_content h3 p {
-  padding-top: 0.5rem;
 }
 .wordpress_content ul {
   display: block;
