--- a/src/app/wpstyles.scss
+++ b/src/app/wpstyles.scss
@@ -26,7 +26,7 @@
 @tailwind utilities;
 
 .wordpress_content {
-  font-size: 1.2rem;
+  //font-size: 1.2rem;
 
   > p {
     padding-bottom: 0.8rem;
@@ -49,7 +49,7 @@
     padding-top: 2rem;
     font-size: 1.5rem;
     font-weight: bold;
-    
+
   }
 
   ul {
